--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <title>Friends In Common</title>
 </head>
 <body>
+    <section class="">
     <div class="title">
     <h1 class="text-center"> FRIENDS IN COMMON </h1>
-    </div>    
+    </div>   
+    </section> 
 
     <section class="section-body">
         <h2 class="text-center">Menu: </h2>
@@ -34,7 +36,7 @@
     <footer>
         <h3 class="text-center">Siguenos En Instagram!!</h3>
         <div class="center-img">
-        <i class="fa-brands fa-square-instagram fa-6x"></i>
+        <i id="instagram" class="fa-brands fa-square-instagram fa-6x"></i>
         </div>
     </footer>
     <script src="index.js"></script>
