--- a/index.html
+++ b/index.html
@@ -11,33 +11,42 @@
     <title>Friends In Common</title>
 </head>
 <body>
-    <section class="">
+    <!-- <section class="">
     <div class="title">
     <h1 class="text-center"> FRIENDS IN COMMON </h1>
     </div>   
-    </section> 
+    </section>  -->
+
+    <main>
 
     <section class="section-body">
-        <h2 class="text-center">Menu: </h2>
-    <div class="center-img padding-bottom">
-        <div class="center-img">
-            <img class="img-divs box-styling" src="https://images.pexels.com/photos/313700/pexels-photo-313700.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Menu Friends-in-Common">
+        
+        <div class="padding-bottom center-title">
+            <div class="center-ig">
+            <!-- <h1 class="text-center"> FRIENDS IN COMMON </h1> -->
+            <img class="logo img-divs" src="./images/Screenshot 2024-09-01 at 20.21.06.png" alt="Logo-FIC">
         </div>
-    </div>
-    <h2 class="text-center"> Valora nuestro servicio: </h2>
-    <div class="center-img padding-bottom">
-        <div class="center-img">
-        <!-- <a href="https://docs.google.com/forms/d/1VRMDM5q_jdcSt79O-LFv6hW9wd11BjX4Ka-5a4ldJIo/viewform?ts=65d90f2f&edit_requested=true"> -->
-            <img id="encuesta" class="img-divs box-styling" src="https://images.pexels.com/photos/4301518/pexels-photo-4301518.jpeg?auto=compress&cs=tinysrgb&w=600" alt="customer-service">
-        <!-- </a> -->
+        <p class="text-center">(Desliza para continuar)</p>
+        </div>
+    <div class="padding-bottom ">
+        <div class="box-style">
+        <h2 class="text-center  hidden">Menu </h2>
     </div>
     </div>
+    
+    <div class="padding-bottom">
+        <div class="box-style">
+        <h2 class="text-center  hidden" id="encuesta"> Valora nuestro servicio </h2>
+    </div>
+    </div>
+    <h3 class="text-center">Siguenos En Instagram!!</h3>
+        <div class="center-ig padding-bottom">
+        <i id="instagram" class="hidden fa-brands fa-square-instagram fa-6x"></i>
+        </div>
     </section>
+    </main>
     <footer>
-        <h3 class="text-center">Siguenos En Instagram!!</h3>
-        <div class="center-img">
-        <i id="instagram" class="fa-brands fa-square-instagram fa-6x"></i>
-        </div>
+
     </footer>
     <script src="index.js"></script>
 </body>
